--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.5",
     "@types/pdf-parse": "^1.1.5",
+    "add": "^2.0.6",
     "bcrypt": "^6.0.0",
+    "bun": "^1.3.8",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -33,6 +35,7 @@
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "pdf-parse": "1.1.1",
+    "serverless-http": "^4.0.0",
     "socket.io": "^4.8.3",
     "tesseract.js": "^7.0.0",
     "uuid": "^13.0.0"
