--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "serverless": "^4.31.2"
   },
   "scripts": {
     "dev": "bun run index.ts",
