--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build Lambda bundle (TypeScript)
         run: |
-          bun build src/handler.ts \
+          bun build server/handler.ts \
             --target=node \
             --bundle \
             --minify \
